upgraded ionic and angularjs via bower, fixed checkbox on ios

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -11,13 +11,8 @@ $positive: #BFAC9E
   width: 96px
   height: 96px
 
-.item.item-checkbox label
-  width: 80%
-  height: 100%
-  top: 20%
-
-  input
-    top: 50%
+.item-checkbox .checkbox
+  right: 40px
 
 .button.x-box
   position: absolute
